<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/calendar">
        <ListPreference
            android:key="calendar_first_day_of_week"
            android:title="@string/pref_title_first_day_of_the_week"
            android:entries="@array/pref_week_first_day_list_titles"
            android:entryValues="@array/pref_week_first_day_list_values"
            android:summary="%s"
            android:defaultValue="1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_enabled"
            android:title="@string/pref_enable_notifications" />
        <io.github.celestialphineas.sanxing.UISupportActivities.TimePreference
            android:key="notifications_time"
            android:dependency="notifications_enabled"
            android:title="@string/pref_set_notification_time" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_enabled"
            android:key="notifications_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notifications_enabled"
            android:key="notifications_vibrate_enabled"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <PreferenceCategory android:title="@string/pref_header_dangerous">
        <PreferenceScreen
            android:summary="@string/summary_clear_data"
            android:title="@string/pref_clear_data">
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:io.github.celestialphineas.sanxing" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>