<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--Reuse the app bar resource-->
    <include
        layout="@layout/app_bar_create_new_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingTop="@dimen/edit_drawable_padding"
                    android:paddingEnd="@dimen/edit_drawable_padding"
                    android:tint="@color/grey"
                    android:src="@drawable/ic_date_picker"
                    android:contentDescription="@string/calendar" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/task_due_date"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/task_due_date_content"
                        android:clickable="true"
                        android:inputType="date"
                        android:hint="@string/hint_due" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="25dp"
                    android:paddingTop="@dimen/edit_drawable_padding"
                    android:paddingEnd="@dimen/edit_drawable_padding"
                    android:tint="@color/grey"
                    android:src="@drawable/ic_time_picker"
                    android:contentDescription="@string/time" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:id="@+id/task_due_time"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/task_due_time_content"
                        android:clickable="true"
                        android:inputType="time"
                        android:hint="@string/hint_due_time" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/form_padding"
                android:paddingBottom="@dimen/form_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingEnd="@dimen/edit_drawable_padding"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:tint="@color/grey"
                    android:src="@drawable/ic_star"
                    android:contentDescription="@string/hint_importance" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/hint_importance" />

                <android.support.v7.widget.AppCompatSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/task_importance_seek_bar"
                    android:layout_gravity="center"
                    android:max="4"
                    android:progress="2" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_description"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/task_description_content"
                    android:padding="@dimen/form_padding"
                    android:hint="@string/hint_description" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
