<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/statistics_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="?android:colorPrimary"
        android:theme="@style/AppTheme.AppBarTheme"
        app:popupTheme="@style/AppTheme.PopupTheme" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_grey">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="40dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:text="@string/total_items"/>
                <TextView
                    android:id="@+id/total_description"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/total_title"
                    android:layout_below="@id/total_title"
                    android:text="@string/statistics_total_description" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_view_list"
                    android:tint="@color/colorPrimary"
                    android:layout_alignStart="@id/total_title"
                    android:layout_alignBottom="@id/total_title"
                    android:layout_marginStart="-40dp"
                    android:layout_marginBottom="3dp"/>
                <GridLayout
                    android:id="@+id/total_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="2"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/total_description"
                    android:layout_alignStart="@id/total_title"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/task_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_columnWeight="1"
                        android:textColor="@color/colorTasks"
                        android:textSize="36sp"
                        android:text="0"
                        tools:text="128"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/habit_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_columnWeight="1"
                        android:textColor="@color/colorHabits"
                        android:textSize="36sp"
                        android:text="0"
                        tools:text="36"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/time_left_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_columnWeight="1"
                        android:textColor="@color/colorTimeLeft"
                        android:textSize="36sp"
                        android:text="0"
                        tools:text="4"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textAlignment="textStart"
                        android:text="@string/statistics_tasks"
                        android:textSize="18sp"
                        android:paddingStart="3dp"
                        android:layout_columnWeight="1"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textAlignment="textStart"
                        android:text="@string/statistics_habits"
                        android:textSize="18sp"
                        android:paddingStart="3dp"
                        android:layout_columnWeight="1"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textAlignment="textStart"
                        android:text="@string/statistics_time_left"
                        android:textSize="18sp"
                        android:paddingStart="3dp"
                        android:layout_columnWeight="1"/>
                </GridLayout>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/toggle_summary_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/total_grid"
                    android:layout_alignEnd="@id/total_grid"
                    android:elevation="2dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="10dp"
                    android:drawableStart="@drawable/ic_visibility"
                    android:drawableTint="@color/white"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/toggle_summary"
                    android:textColor="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@color/colorPrimaryLight"
                    style="@android:style/Widget.Material.Button"/>
            </RelativeLayout>
            <View android:background="@color/light_light_grey"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
